Fixed overflow issue for mobile devices.

--- a/src/App.css
+++ b/src/App.css
@@ -3,10 +3,18 @@
   --header-offset: 84px;
 }
 
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+html,
 body {
   font-family: var(--global-font);
   margin: 0;
   padding: 0;
+  overflow-x: clip;
 }
 
 html.lenis,
