--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -18,6 +18,7 @@
 .contact-buttons {
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
     gap: 10px;
 }
 
@@ -44,4 +45,11 @@
 .footer-note {
     font-size: 0.9rem;
     color: #ccc;
+}
+
+@media (max-width: 767px) {
+    #footer {
+        padding-left: 20px;
+        padding-right: 20px;
+    }
 }
